--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="stylesheet\style.css">
+    <link href="http://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+                
     <title>Vizitkarte</title>
 </head>
 <body>
-    
+    <div class="teksts">
+        <h1>Kristaps Bērtulis</h1>
+        <h3>Sex Bomba</p>
+    </div>
+    <img src="images\PngItem_159891.png" alt="penguin_image">
 </body>
 </html>
