--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
         <h3>Sex Bomba</p>
     </div>
     <img src="images\PngItem_159891.png" alt="penguin_image">
+    <div class="header">
+        <button type="button1"> free RAM</button>
+    </div>
 </body>
 </html>
